--- a/BackendAPI/requirements.txt
+++ b/BackendAPI/requirements.txt
@@ -5,7 +5,8 @@ click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
-fastapi-cli==0.0.7
+# Include uvicorn with standard extras for production-ready server features
+uvicorn[standard]==0.34.0
 flake8==7.2.0
 h11==0.14.0
 httpcore==1.0.7
@@ -37,7 +38,7 @@ starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
-uvicorn==0.34.0
+# uvloop, watchfiles, websockets are pulled via uvicorn[standard], keeping explicit pins is optional
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
