--- a/BackendAPI/requirements.txt
+++ b/BackendAPI/requirements.txt
@@ -38,7 +38,7 @@ starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
-# uvloop, watchfiles, websockets are pulled via uvicorn[standard], keeping explicit pins is optional
+# uvicorn[standard] supplies uvloop, watchfiles, websockets; explicit pins are optional
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
